复制website_description，用于学习研究。版本1.0。添加333

--- a/website_description/views/albert_company.xml
+++ b/website_description/views/albert_company.xml
@@ -2,6 +2,7 @@
 <openerp>
     <data>
 <!--test222222-->
+        <!--test333333-->
 		 <record model="ir.ui.view" id="company_code">
             <field name="name">company_code</field>
             <field name="model">res.company</field>
